@@ -1,0 +1,51 @@
+# Generated by Django 2.1.7 on 2019-04-15 16:10
+
+import courses.models
+from django.db import migrations, models
+import django.db.models.deletion
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('accounts', '0012_student_grades'),
+        ('courses', '0015_auto_20190411_1951'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='grade',
+            name='file',
+            field=models.FileField(blank=True, default=None, upload_to=courses.models.response_upload_address),
+        ),
+        migrations.AddField(
+            model_name='grade',
+            name='stdnt',
+            field=models.ForeignKey(blank=True, default=None, on_delete=django.db.models.deletion.CASCADE, to='accounts.Student'),
+        ),
+        migrations.AlterField(
+            model_name='grade',
+            name='assignment',
+            field=models.OneToOneField(blank=True, default=None, on_delete=django.db.models.deletion.CASCADE, to='courses.Assignment'),
+        ),
+        migrations.AlterField(
+            model_name='grade',
+            name='grade_value',
+            field=models.FloatField(blank=True, default=None),
+        ),
+        migrations.AlterField(
+            model_name='homework',
+            name='file',
+            field=models.FileField(blank=True, upload_to=courses.models.homework_upload_address),
+        ),
+        migrations.AlterField(
+            model_name='quiz',
+            name='file',
+            field=models.FileField(blank=True, upload_to=courses.models.quiz_upload_address),
+        ),
+        migrations.AlterField(
+            model_name='survey',
+            name='file',
+            field=models.FileField(blank=True, upload_to=courses.models.survey_upload_address),
+        ),
+    ]
