@@ -1,0 +1,18 @@
+# Generated by Django 2.1.7 on 2019-04-16 21:38
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('courses', '0016_auto_20190415_1610'),
+    ]
+
+    operations = [
+        migrations.AlterField(
+            model_name='grade',
+            name='file',
+            field=models.FileField(blank=True, default=None, upload_to=''),
+        ),
+    ]
