@@ -1,5 +1,6 @@
 - version: unreleased
-
+- grades upload resopnses to Google Cloud(@Chino96)
+- Finished grade model(@Chino96)
 - Added and populated grade pages(@kh06089)
 - created grade assignment list view (@kh06089)
 - Created buffer page for student side quiz (@kh06089)
